# serde_fast_flatten

./: Cargo.toml  Readme.md
benches/: benchmark.rs
serde_fast_flatten/: Cargo.toml
serde_fast_flatten/src/: deserialize.rs  lib.rs
serde_fast_flatten/src/snapshots/: serde_fast_flatten__test__roundtrip_cbor_packed.snap
serde_fast_flatten/src/test_structs/: mod.rs  serde_flatten.rs
serde_fast_flatten_derive/: Cargo.toml
serde_fast_flatten_derive/src/: deserialize.rs  deserialize_fields.rs  lib.rs  serialize.rs  serialize_fields.rs
serde_fast_flatten_derive/tests/: derive.rs  generics.rs
serde_fast_flatten_derive/tests/snapshots/: derive__roundtrip_bincode.snap  derive__roundtrip_bincode.snap.bincode  derive__roundtrip_bincode_compact.snap.bincode  derive__roundtrip_bitcode.snap  derive__roundtrip_bitcode.snap.bitcode  derive__roundtrip_cbor.snap.cbor  derive__roundtrip_cbor_packed.snap  derive__roundtrip_cbor_packed.snap.cbor  derive__roundtrip_json.snap  derive__roundtrip_yaml.snap  generics__generics.snap
src/: identifier.rs  lib.rs  serialize.rs  test.rs
src/snapshots/: serde_fast_flatten__test__roundtrip_bincode.snap  serde_fast_flatten__test__roundtrip_bitcode.snap  serde_fast_flatten__test__roundtrip_bitcode.snap.bitcode  serde_fast_flatten__test__roundtrip_cbor.snap.cbor  serde_fast_flatten__test__roundtrip_cbor_packed.snap.cbor  serde_fast_flatten__test__roundtrip_json.snap  serde_fast_flatten__test__roundtrip_yaml.snap
src/test_structs/: fast_flatten.rs  serde_unflattened.rs
