[package]
name = "serde_fast_flatten"
version = "0.1.0"
description = "A faster `flatten` implementation for serde"
authors = ["Maarten Deprez <deprez.maarten@gmail.com>"]
keywords = ["serde", "serialization", "flatten"]
categories = ["encoding"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maartendeprez/serde_fast_flatten"
readme = "Readme.md"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
bitcode = { version = "0.6.4", features = ["serde"] }
criterion = "0.5.1"
insta = "1.42.1"
serde_cbor = "0.11.2"
serde_json = "1.0.138"
serde_yaml = "0.9.34"

[[bench]]
name = "benchmark"
harness = false
