[workspace]
members = ["serde_fast_flatten", "serde_fast_flatten_derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maarten Deprez <deprez.maarten@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maartendeprez/serde_fast_flatten"
readme = "Readme.md"


[patch.crates-io]
serde_fast_flatten = { path = "serde_fast_flatten" }
