[package]
name = "serde_fast_flatten"
description = "A faster `flatten` implementation for serde"
keywords = ["serde", "serialization", "flatten"]
categories = ["encoding"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
# rust-version.workspace = true

[features]
default = []
derive = ["dep:serde_fast_flatten_derive"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_fast_flatten_derive = { version = "0.1.0", optional = true, path = "../serde_fast_flatten_derive" }

[dev-dependencies]
serde_fast_flatten_derive = { version = "0.1.0", path = "../serde_fast_flatten_derive" }
bincode = "1.3.3"
bitcode = { version = "0.6.4", features = ["serde"] }
criterion = "0.5.1"
insta = "1.42.1"
serde_cbor = "0.11.2"
serde_json = "1.0.138"
serde_yaml = "0.9.34"

[[bench]]
name = "benchmark"
harness = false
