[package]
name = "serde_fast_flatten_derive"
description = "A faster `flatten` implementation for serde"
authors = ["Maarten Deprez <deprez.maarten@gmail.com>"]
keywords = ["serde", "serialization", "flatten"]
categories = ["encoding"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
# rust-version.workspace = true

[lib]
proc-macro = true

[features]
default = []

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde_derive_internals = "0.29.1"
syn = "2.0.98"
# prettyplease = "0.2.29"

[dev-dependencies]
bincode = "1.3.3"
bitcode = { version = "0.6.4", features = ["serde"] }
insta = "1.42.1"
serde = "1.0.217"
serde_cbor = "0.11.2"
serde_fast_flatten = { version = "0.1.0", path = "../serde_fast_flatten", features = [
    "derive",
] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
